force-app/main/default/objects/service_item__c/service_item__c.object-meta.xml
<CustomObject>
    <label>Service Item</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Service Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>