force-app/main/default/objects/service_item__c/fields/Attorney_Company__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Company__c</fullName>
    <label>Attorney Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>