force-app/main/default/objects/service_item__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <formula>LEFT(Plaintiff_First_Name__c, 1) + &apos;. &apos; + Plaintiff_Last_Name__c + &quot; vs USCIS #&quot; + Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>