force-app/main/default/objects/service_item__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>