force-app/main/default/objects/service_item__c/fields/Plaintiff_A_Number__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_A_Number__c</fullName>
    <label>Plaintiff A Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>