force-app/main/default/objects/service_item__c/fields/Plaintiff_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Birthdate__c</fullName>
    <label>Plaintiff Birthdate</label>
    <type>Date</type>
</CustomField>