force-app/main/default/objects/service_item__c/fields/Plaintiff_Gender__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Gender__c</fullName>
    <label>Plaintiff Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>