force-app/main/default/objects/service_item__c/fields/Plaintiff_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Last_Name__c</fullName>
    <label>Plaintiff Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>