force-app/main/default/objects/service_item__c/fields/Plaintiff_Port_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Port_of_Entry__c</fullName>
    <label>Plaintiff Port of Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>