force-app/main/default/objects/service_item__c/fields/Plantiff_Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Plantiff_Country_Of_Origin__c</fullName>
    <label>Plaintiff Country of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>