force-app/main/default/objects/service_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plaintiff_First_Name__c</columns>
    <columns>Plaintiff_Last_Name__c</columns>
    <columns>Plaintiff_Birthdate__c</columns>
    <columns>Plantiff_Country_Of_Origin__c</columns>
    <columns>Plaintiff_Gender__c</columns>
    <columns>Plaintiff_A_Number__c</columns>
    <columns>Plaintiff_Port_of_Entry__c</columns>
    <columns>Attorney_Name__c</columns>
    <columns>Attorney_Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>